# research_agent_poc

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/research_agent_poc/: crew.py  main.py
src/research_agent_poc/config/: agents.yaml  tasks.yaml
