[project]
name = "research_agent_poc"
version = "0.1.0"
description = "research_agent_poc using crewAI"
authors = [{ name = "Dorothy Brown", email = "dorothy.brown@opengrowth.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0",
    "redis"
]

[tool.poetry]
name = "research_agent_poc"
version = "0.1.0"
description = "research_agent_poc using crewAI"
authors = ["Dorothy Brown <dorothy.brown@opengrowth.com>"]
readme = "README.md"


[project.scripts]
research_agent_poc = "research_agent_poc.main:run"
run_crew = "research_agent_poc.main:run"
train = "research_agent_poc.main:train"
replay = "research_agent_poc.main:replay"
test = "research_agent_poc.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_agent_poc"]
